--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/.yarn/*
+# !/.yarn/patches
+# !/.yarn/plugins
+!/.yarn/releases
+# !/.yarn/sdks
+# !/.yarn/cache
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
+/resources/scripts/Meta.ts
