--- a/package.json
+++ b/package.json
@@ -1,21 +1,68 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@vitejs/plugin-vue": "^2.3.3",
-        "@vue/compiler-sfc": "^3.2.37",
-        "autoprefixer": "^10.4.7",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.0.24",
-        "vite": "^2.9.9",
-        "vite-plugin-laravel": "^0.2.0-beta.18"
-    },
-    "dependencies": {
-        "vue": "^3.2.36",
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0"
-    }
+  "$schema": "https://json.schemastore.org/package.json",
+  "private": true,
+  "engines": {
+    "node": ">=16.15.1",
+    "yarn": ">=1.22.4"
+  },
+  "packageManager": "yarn@3.2.1",
+  "scripts": {
+    "dev": "vite",
+    "clean": "rimraf ./node_modules/.vite",
+    "lint": "eslint . --fix --cache --cache-location ./node_modules/.vite/vite-plugin-eslint && prettier . -w -u",
+    "lint:style": "stylelint \"./**/*.{css,sass,scss,htm,html,vue}\" --fix --cache-location ./node_modules/.vite/vite-plugin-stylelint  && prettier  \"./**/*.{css,sass,scss,htm,html,vue}\" -w -u",
+    "lint:markup": "vue-tsc --noEmit",
+    "build": "vue-tsc --noEmit && vite build",
+    "build:analyze": "vue-tsc --noEmit && vite build --mode analyze",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "@inertiajs/inertia": "^0.11.0",
+    "@inertiajs/inertia-vue": "^0.8.0",
+    "@vue/composition-api": "^1.6.2",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.3",
+    "vue2-helpers": "^1.1.7",
+    "vue2-teleport": "^1.0.1",
+    "vuex": "^3.6.2"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.42",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-tsdoc": "^0.2.16",
+    "eslint-plugin-vue": "^9.1.1",
+    "eslint-plugin-vuejs-accessibility": "^1.2.0",
+    "eslint-plugin-yaml": "^0.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.1",
+    "postcss": "^8.4.14",
+    "postcss-html": "^1.4.1",
+    "postcss-scss": "^4.0.4",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-recommended-scss": "^6.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-order": "^5.0.0",
+    "tailwindcss": "^3.1.2",
+    "typescript": "^4.7.3",
+    "vite": "^2.9.12",
+    "vite-plugin-checker": "^0.4.6",
+    "vite-plugin-laravel": "^0.2.0-beta.21",
+    "vite-plugin-vue2": "^2.0.1",
+    "vue-eslint-parser": "^9.0.2",
+    "vue-template-compiler": "^2.6.14",
+    "vue-tsc": "^0.37.7"
+  }
 }
