--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
   "dependencies": {
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-vue": "^0.8.0",
+    "@inertiajs/progress": "^0.2.7",
+    "@tailwindcss/forms": "^0.5.2",
     "@vue/composition-api": "^1.6.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vue2-helpers": "^1.1.7",
     "vue2-teleport": "^1.0.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "ziggy-js": "^1.4.6"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
+    "@types/ziggy-js": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -48,7 +52,7 @@
     "postcss": "^8.4.14",
     "postcss-html": "^1.4.1",
     "postcss-scss": "^4.0.4",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.0",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "stylelint": "^14.9.1",
@@ -57,12 +61,13 @@
     "stylelint-order": "^5.0.0",
     "tailwindcss": "^3.1.2",
     "typescript": "^4.7.3",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.12",
     "vite-plugin-checker": "^0.4.6",
     "vite-plugin-laravel": "^0.2.0-beta.21",
     "vite-plugin-vue2": "^2.0.1",
     "vue-eslint-parser": "^9.0.2",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.37.7"
+    "vue-tsc": "^0.37.8"
   }
 }
