--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -47,7 +47,7 @@ settings:
     typescript: {}
     alias:
       map:
-        - ['@', './src']
+        - ['@', './resources']
       extensions:
         - .js
         - .ts
