--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "inertiajs/inertia-laravel": "^0.5.4",
     "innocenzi/laravel-vite": "0.2.*",
     "laravel/framework": "^9.11",
-    "laravel/sanctum": "^2.8",
+    "laravel/sanctum": "^2.14.1",
     "laravel/tinker": "^2.7",
     "pestphp/pest": "^1.21",
     "pestphp/pest-plugin-laravel": "^1.2",
@@ -59,6 +59,9 @@
       "@php artisan key:generate --ansi"
     ],
     "lint": [
+      "./vendor/bin/phpcs ."
+    ],
+    "fix": [
       "./vendor/bin/phpcbf ."
     ]
   },
