--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,7 @@
     "importHelpers": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "newLine": "lf",
@@ -22,20 +19,14 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
-      "@/*": [
-        "./resources/*"
-      ]
+      "@/*": ["./resources/scripts/*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "types": [
-      "vite/client",
-      "node",
-      "vue"
-    ],
+    "types": ["vite/client", "node", "vue"],
     "useDefineForClassFields": true,
     "baseUrl": "."
   },
@@ -45,10 +36,7 @@
     "resources/**/*.tsx",
     "resources/**/*.vue"
   ],
-  "exclude": [
-    "node_modules",
-    "public/dist"
-  ],
+  "exclude": ["node_modules", "public/dist"],
   "references": [
     {
       "path": "./tsconfig.node.json"
